Un poquito de to

--- a/ALGORITMICA/practica1/Makefile
+++ b/ALGORITMICA/practica1/Makefile
@@ -1,8 +1,8 @@
-INCLUDE=funciones.hpp metodoInsercionBinaria.hpp metodo.hpp Clock.hpp metodoShell.hpp
-OBJECTS=funciones.o metodoInsercionBinaria.o main.o metodoShell.o 
+INCLUDE=funciones.hpp metodoInsercionBinaria.hpp metodo.hpp Clock.hpp metodoShell.hpp ajuste.hpp
+OBJECTS=funciones.o metodoInsercionBinaria.o main.o metodoShell.o  ajuste.o
 
 main: $(OBJECTS) $(INCLUDE)
-	g++ $(OBJECTS) -g -o main
+	g++ $(OBJECTS) -Wall -o3 -g -o main
 
 main.o: main.cpp
 	g++ -c main.cpp	
@@ -15,3 +15,9 @@ metodoInsercionBinaria.o: metodoInsercionBinaria.cpp metodoInsercionBinaria.hpp 
 
 metodoShell.o: metodoShell.cpp metodoShell.hpp metodo.hpp
 	g++ -c metodoShell.cpp
+
+ajuste.o: ajuste.cpp ajuste.hpp
+	g++ -c ajuste.cpp
+
+clean:
+	rm *.o
