REDES PW... de todo

--- a/REDES/Practica2/Makefile
+++ b/REDES/Practica2/Makefile
@@ -1,8 +1,10 @@
+all: bingoCliente bingoServidor clean
+
 bingoCliente: bingoCliente.c 
 	gcc bingoCliente.c -o bingoCliente
 
-bingoServidor: bingoServidor.c funcionesServidor.c funcionesServidor.h
-	gcc funcionesServidor.c bingoServidor.c -o bingoServidor
+bingoServidor: bingoServidor.c funcionesServidor.c funcionesServidor.h registro.c registro.h estructuras.h
+	gcc funcionesServidor.c bingoServidor.c registro.c -o bingoServidor
 
 clean:
 	rm *.o
