REDES. Registro actualizado

--- a/REDES/Practica2/Makefile
+++ b/REDES/Practica2/Makefile
@@ -1,10 +1,26 @@
+INCLUDES = funcionesServidor.h registro.h estructuras.h 
+OBJECTS = bingoServidor.o funcionesServidor.o registro.o
+FLAGS = -Wall -g -o
+
 all: bingoCliente bingoServidor clean
 
-bingoCliente: bingoCliente.c 
-	gcc bingoCliente.c -o bingoCliente
+bingoCliente: bingoCliente.o
+	gcc bingoCliente.o $(FLAGS) bingoCliente
 
-bingoServidor: bingoServidor.c funcionesServidor.c funcionesServidor.h registro.c registro.h estructuras.h
-	gcc funcionesServidor.c bingoServidor.c registro.c -o bingoServidor
+bingoServidor: $(INCLUDES) $(OBJECTS)
+	gcc $(OBJECTS) $(FLAGS) bingoServidor
+
+bingoCliente.o: bingoCliente.c
+	gcc -c bingoCliente.c
+
+bingoServidor.o: bingoServidor.c
+	gcc -c bingoServidor.c
+
+funcionesServidor.o: funcionesServidor.c funcionesServidor.h
+	gcc -c funcionesServidor.c
+
+registro.o: registro.c registro.h
+	gcc -c registro.c
 
 clean:
 	rm *.o
