ALG Añadida P5 sin grafico

--- a/ALGORITMICA/practica5/Makefile
+++ b/ALGORITMICA/practica5/Makefile
@@ -1,2 +1,2 @@
-main: Cambio.* funciones.* main.cpp
+main: Cambio.* funciones.* main.cpp Moneda.hpp
 	g++ main.cpp Cambio.cpp funciones.cpp -Wall -g -o main
