Modificacion ejemplos practica2 PL

--- a/PL/Practica2/bison/ejemplo6/Makefile
+++ b/PL/Practica2/bison/ejemplo6/Makefile
@@ -1,32 +1,35 @@
-FUENTE = ejemplo6
-LEXICO = lexico6
+VERSION= 6
+FUENTE = ejemplo$(VERSION)
+LEXICO = lexico$(VERSION)
+
 
 
 CC = gcc
-YFLAGS = -d -v 
-LFLAGS = -lm -lfl 
-OBJS= $(FUENTE).tab.o lex.yy.o  init6.o   math6.o   symbol6.o 
+CFLAGS = -c -g
+YFLAGS = -d         # Generar el fichero $(FUENTE).tab.h 
+LFLAGS = -lm -lfl   # fl: biblioteca de flex; m: biblioteca matemática
+OBJS= $(FUENTE).tab.o lex.yy.o  init$(VERSION).o   math$(VERSION).o   symbol$(VERSION).o 
 
 $(FUENTE)3.exe: $(OBJS) 
 	$(CC) $(OBJS) $(LFLAGS) -o $(FUENTE).exe
 
-init6.o:  init6.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c init6.c
+init$(VERSION).o:  init$(VERSION).c $(FUENTE).h $(FUENTE).tab.h
+	$(CC) $(CFLAGS) init$(VERSION).c
 
-symbol6.o:  symbol6.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c symbol6.c
+symbol$(VERSION).o:  symbol$(VERSION).c $(FUENTE).h $(FUENTE).tab.h
+	$(CC) $(CFLAGS) symbol$(VERSION).c
 
-math6.o:  math6.c $(FUENTE).h
-	$(CC) -c math6.c
+math$(VERSION).o:  math$(VERSION).c $(FUENTE).h
+	$(CC) $(CFLAGS) math$(VERSION).c
 
-lex.yy.o:  lex.yy.c $(FUENTE).tab.h $(FUENTE).h
-	$(CC) -c lex.yy.c
+lex.yy.o:  lex.yy.c $(FUENTE).tab.h $(FUENTE).h macros.h
+	$(CC) $(CFLAGS) lex.yy.c
 
-lex.yy.c: $(LEXICO).l $(FUENTE).tab.h $(FUENTE).h
+lex.yy.c: $(LEXICO).l $(FUENTE).tab.h $(FUENTE).h macros.h
 	flex $(LEXICO).l
 
 $(FUENTE).tab.o:  $(FUENTE).tab.c $(FUENTE).tab.h $(FUENTE).h
-	$(CC) -c $(FUENTE).tab.c
+	$(CC) $(CFLAGS) $(FUENTE).tab.c
 
 $(FUENTE).tab.c $(FUENTE).tab.h:  $(FUENTE).y $(FUENTE).h 
 	bison $(YFLAGS) $(FUENTE).y
