--- a/PL/Practica2/bison/ejemplo9/Makefile
+++ b/PL/Practica2/bison/ejemplo9/Makefile
@@ -1,31 +1,32 @@
-FUENTE = ejemplo9
-LEXICO = lexico9
-
+VERSION= 9
+FUENTE = ejemplo$(VERSION)
+LEXICO = lexico$(VERSION)
 
 CC = gcc
-YFLAGS = -d -v 
-LFLAGS = -lm -lfl 
-OBJS= $(FUENTE).tab.o lex.yy.o  init9.o math9.o symbol9.o  code9.o
+CFLAGS = -c -g
+YFLAGS = -d         # Generar el fichero $(FUENTE).tab.h 
+LFLAGS = -lm -lfl   # fl: biblioteca de flex; m: biblioteca matemáticalfl 
+OBJS= $(FUENTE).tab.o lex.yy.o  init$(VERSION).o   math$(VERSION).o   symbol$(VERSION).o  code$(VERSION).o
 
 $(FUENTE)3.exe: $(OBJS) 
 	$(CC) $(OBJS) $(LFLAGS) -o $(FUENTE).exe
 
-code9.o:  code9.c $(FUENTE).h
-	$(CC) -c code9.c
+code$(VERSION).o:  code$(VERSION).c $(FUENTE).h
+	$(CC) -c code$(VERSION).c
 
-init9.o:  init9.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c init9.c
+init$(VERSION).o:  init$(VERSION).c $(FUENTE).h $(FUENTE).tab.h
+	$(CC) -c init$(VERSION).c
 
-symbol9.o:  symbol9.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c symbol9.c
+symbol$(VERSION).o:  symbol$(VERSION).c $(FUENTE).h $(FUENTE).tab.h
+	$(CC) -c symbol$(VERSION).c
 
-math9.o:  math9.c $(FUENTE).h
-	$(CC) -c math9.c
+math$(VERSION).o:  math$(VERSION).c $(FUENTE).h
+	$(CC) -c math$(VERSION).c
 
-lex.yy.o:  lex.yy.c $(FUENTE).tab.h $(FUENTE).h
+lex.yy.o:  lex.yy.c $(FUENTE).tab.h $(FUENTE).h macros.h
 	$(CC) -c lex.yy.c
 
-lex.yy.c: $(LEXICO).l $(FUENTE).tab.h $(FUENTE).h
+lex.yy.c: $(LEXICO).l $(FUENTE).tab.h $(FUENTE).h macros.h
 	flex $(LEXICO).l
 
 $(FUENTE).tab.o:  $(FUENTE).tab.c $(FUENTE).tab.h $(FUENTE).h
