--- a/PL/Practica2/bison/ejemplo5/Makefile
+++ b/PL/Practica2/bison/ejemplo5/Makefile
@@ -1,32 +1,35 @@
-FUENTE = ejemplo5
-LEXICO = lexico5
+VERSION= 5
+FUENTE = ejemplo$(VERSION)
+LEXICO = lexico$(VERSION)
+
 
 
 CC = gcc
-YFLAGS = -d 
-LFLAGS = -lm -lfl 
+CFLAGS = -c -g
+YFLAGS = -d         # Generar el fichero $(FUENTE).tab.h 
+LFLAGS = -lm -lfl   # fl: biblioteca de flex; m: biblioteca matemática
 OBJS= $(FUENTE).tab.o lex.yy.o  init.o   math.o   symbol.o 
 
 $(FUENTE)3.exe: $(OBJS) 
 	$(CC) $(OBJS) $(LFLAGS) -o $(FUENTE).exe
 
 init.o:  init.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c init.c
+	$(CC) $(CFLAGS) init.c
 
 symbol.o:  symbol.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c symbol.c
+	$(CC) $(CFLAGS) symbol.c
 
 math.o:  math.c $(FUENTE).h
-	$(CC) -c math.c
+	$(CC) $(CFLAGS) math.c
 
 lex.yy.o:  lex.yy.c $(FUENTE).tab.h $(FUENTE).h
-	$(CC) -c lex.yy.c
+	$(CC) $(CFLAGS) lex.yy.c
 
 lex.yy.c: $(LEXICO).l $(FUENTE).tab.h $(FUENTE).h
 	flex $(LEXICO).l
 
 $(FUENTE).tab.o:  $(FUENTE).tab.c $(FUENTE).tab.h $(FUENTE).h
-	$(CC) -c $(FUENTE).tab.c
+	$(CC) $(CFLAGS) $(FUENTE).tab.c
 
 $(FUENTE).tab.c $(FUENTE).tab.h:  $(FUENTE).y $(FUENTE).h 
 	bison $(YFLAGS) $(FUENTE).y
