--- a/PL/Practica2/bison/ejemplo8/Makefile
+++ b/PL/Practica2/bison/ejemplo8/Makefile
@@ -1,31 +1,32 @@
-FUENTE = ejemplo8
-LEXICO = lexico8
-
+VERSION= 8
+FUENTE = ejemplo$(VERSION)
+LEXICO = lexico$(VERSION)
 
 CC = gcc
-YFLAGS = -d -v 
-LFLAGS = -lm -lfl 
-OBJS= $(FUENTE).tab.o lex.yy.o  init8.o math8.o symbol8.o  code8.o
+CFLAGS = -c -g
+YFLAGS = -d         # Generar el fichero $(FUENTE).tab.h 
+LFLAGS = -lm -lfl   # fl: biblioteca de flex; m: biblioteca matemáticalfl 
+OBJS= $(FUENTE).tab.o lex.yy.o  init$(VERSION).o   math$(VERSION).o   symbol$(VERSION).o  code$(VERSION).o
 
 $(FUENTE)3.exe: $(OBJS) 
 	$(CC) $(OBJS) $(LFLAGS) -o $(FUENTE).exe
 
-code8.o:  code8.c $(FUENTE).h
-	$(CC) -c code8.c
+code$(VERSION).o:  code$(VERSION).c $(FUENTE).h
+	$(CC) -c code$(VERSION).c
 
-init8.o:  init8.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c init8.c
+init$(VERSION).o:  init$(VERSION).c $(FUENTE).h $(FUENTE).tab.h
+	$(CC) -c init$(VERSION).c
 
-symbol8.o:  symbol8.c $(FUENTE).h $(FUENTE).tab.h
-	$(CC) -c symbol8.c
+symbol$(VERSION).o:  symbol$(VERSION).c $(FUENTE).h $(FUENTE).tab.h
+	$(CC) -c symbol$(VERSION).c
 
-math8.o:  math8.c $(FUENTE).h
-	$(CC) -c math8.c
+math$(VERSION).o:  math$(VERSION).c $(FUENTE).h
+	$(CC) -c math$(VERSION).c
 
-lex.yy.o:  lex.yy.c $(FUENTE).tab.h $(FUENTE).h
+lex.yy.o:  lex.yy.c $(FUENTE).tab.h $(FUENTE).h macros.h
 	$(CC) -c lex.yy.c
 
-lex.yy.c: $(LEXICO).l $(FUENTE).tab.h $(FUENTE).h
+lex.yy.c: $(LEXICO).l $(FUENTE).tab.h $(FUENTE).h macros.h
 	flex $(LEXICO).l
 
 $(FUENTE).tab.o:  $(FUENTE).tab.c $(FUENTE).tab.h $(FUENTE).h
